dropshot/tests/fail/bad_server_endpoint11.stderr
error: endpoint handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               [body_param: TypedBody<J>,]
               [body_param: UntypedBody,]
               [body_param: StreamingBody,]
               [raw_request: RawRequest,]
           ) -> Result<HttpResponse*, HttpError>
  --> tests/fail/bad_server_endpoint11.rs:15:7
   |
15 | trait MyServer {
   |       ^^^^^^^^

error: endpoint `bad_no_result` must return a Result
  --> tests/fail/bad_server_endpoint11.rs:22:5
   |
22 |     async fn bad_no_result(_: RequestContext<Self::Context>);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
